book/tests/snapshots/snapshot__@syntax-7.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Error expected\n\nfrom employees\nderive total_distance = sum distance\n"
input_file: book/tests/prql/syntax-7.prql
---
Error:
   ╭─[:4:29]
   │
 4 │ derive total_distance = sum distance
   ·                             ────┬───
   ·                                 ╰───── Unknown name distance
───╯

